--- a/students/templates/students/index.html
+++ b/students/templates/students/index.html
@@ -155,15 +155,61 @@
         <div class="row">
             <div class="col-12">
                 {% if students %}
-                {% else %}
-                {% endif %}
                 <div class="card bg-light ms-4 me-4 mb-4">
-                    <div class="card-header">Header</div>
+                    <div class="card-header"><i class="fas fa-bars fa-lg"></i>
+                    Students Record</div>
                     <div class="card-body">
-                      <h4 class="card-title">Light card title</h4>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                  <tr>
+                                    <th scope="col">Student Name</th>
+                                    <th scope="col"> first_name</th>
+                                    <th scope="col">last_name</th>
+                                    <th scope="col">email</th>
+                                    <th scope="col">field_of_study</th>
+                                    <th scope="col">gpa</th>
+                                    <th scope="col">Actions</th>
+                                  </tr>
+                                  </thead>
+                                </tbody>
+                                {% for students in students %}
+                                <tr>
+                                    <td>
+                                        {{ students.student_number }}
+                                    </td>
+                                    <td>
+                                        {{ students.first_name }}
+                                    </td>
+                                    <td>
+                                        {{ students.last_name }}
+                                    </td>
+                                    <td>
+                                        {{ students.email }}
+                                    </td>
+                                    <td>
+                                        {{ students.field_of_study }}
+                                    </td>
+                                    <td>
+                                        {{ students.gpa }}
+                                    </td>
+                                    <td>
+                                        Actions
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                              </table>
+                        </div>
+                      </p>
                     </div>
                   </div>
+                {% else %}
+                <h5 class="alert  alert-primary ms-4 me-4">
+                    No students found. Please add some students to see the list.
+                </h5>
+                {% endif %}
+
             </div>
         </div>
     </div>
