--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -132,7 +132,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="{% url "index" %}">
             <i class="fas fa-graduation-cap"></i> Student Management System
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -141,7 +141,7 @@
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fas fa-users"></i> All Students</a>
+                <a class="nav-link" href="{% url "index" %}"><i class="fas fa-users"></i> All Students</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href=" {% url "add" %}"><i class="fas fa-user-plus"></i> Add Student</a>
@@ -154,7 +154,7 @@
     <div class="container-fluid">
         {% block body %}
         
-        
+
 
         {% endblock body %}
     </div>
